# drf-auth

./: README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
api/: models.py  permissions.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
todo_drf_auth/: asgi.py  settings.py  urls.py  wsgi.py
