[tool.poetry]
name = "drf-auth"
version = "0.1.0"
description = ""
authors = ["BEN <benjamin.hill28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.0.4"
httpie = "^2.4.0"
djangorestframework-simplejwt = "^4.6.0"
whitenoise = "^5.2.0"
Django = "^3.1.7"
black = "^20.8b1"
flake8 = "^3.9.0"
djangorestframework = "^3.12.2"
psycopg2-binary = "^2.8.6"
psycopg2 = "^2.8.6"
django-cors-headers = "^3.7.0"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
